--- a/Transitions/Base.lproj/Main.storyboard
+++ b/Transitions/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,89 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Transitions" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Aarifah" translatesAutoresizingMaskIntoConstraints="NO" id="tJH-MB-fj6">
+                                <rect key="frame" x="94.5" y="113" width="225" height="217"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="217" id="8Dt-wU-b96"/>
+                                    <constraint firstAttribute="width" constant="225" id="uXG-EP-3C3"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f8Q-ko-o5N">
+                                <rect key="frame" x="143.5" y="462" width="127" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="vvA-mi-CR0"/>
+                                </constraints>
+                                <state key="normal" title="Perform Transition"/>
+                                <connections>
+                                    <action selector="performTransition:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6f8-qJ-A7f"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="f8Q-ko-o5N" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8Eg-nR-oQb"/>
+                            <constraint firstItem="f8Q-ko-o5N" firstAttribute="top" secondItem="tJH-MB-fj6" secondAttribute="bottom" constant="132" id="T0o-GW-hku"/>
+                            <constraint firstItem="tJH-MB-fj6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jFY-Wd-5CJ"/>
+                            <constraint firstItem="tJH-MB-fj6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="69" id="qcT-dZ-Bei"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="myImage" destination="tJH-MB-fj6" id="SCY-Zy-5S6"/>
+                        <segue destination="eRK-IN-S7u" kind="presentation" identifier="go" customClass="Transition" customModule="Transitions" customModuleProvider="target" modalPresentationStyle="formSheet" id="bCr-MS-9mh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-172.46376811594203" y="-17.410714285714285"/>
+        </scene>
+        <!--ToVC-->
+        <scene sceneID="tLD-Me-ro3">
+            <objects>
+                <viewController id="eRK-IN-S7u" customClass="ToVC" customModule="Transitions" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jbE-F4-nai" customClass="T">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TNm-3g-niL">
+                                <rect key="frame" x="282" y="64" width="34" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="back"/>
+                                <connections>
+                                    <action selector="back:" destination="eRK-IN-S7u" eventType="touchUpInside" id="34U-CD-AcJ"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Aarifah" translatesAutoresizingMaskIntoConstraints="NO" id="0GU-yf-2VT">
+                                <rect key="frame" x="-1" y="215" width="415" height="493"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="493" id="DRp-nf-MjI"/>
+                                    <constraint firstAttribute="width" constant="415" id="h3A-SV-dg4"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="0GU-yf-2VT" firstAttribute="centerX" secondItem="jbE-F4-nai" secondAttribute="centerX" id="4P0-vJ-8II"/>
+                            <constraint firstItem="0GU-yf-2VT" firstAttribute="centerY" secondItem="jbE-F4-nai" secondAttribute="centerY" id="K8w-Ao-37Z"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="suZ-NS-O1H"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Bga-qn-I9d"/>
+                    <connections>
+                        <outlet property="image" destination="0GU-yf-2VT" id="cs8-l9-DK9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4ox-79-JGb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="600" y="-17"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Aarifah" width="110" height="110"/>
+    </resources>
 </document>
